Fix CSS values and improve readability - change `em` -> `rem` - set default font size to `20px` - set font size to `16px` for devices with width less than `500px` - change background color to `#060606` for better readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,18 @@
 :root {
-    --background: #ffffff;
-    --foreground: #171717;
     --primary-color: #00b123;
     --primary-text-color: #00ff33;
-    --font-size: 1.04em;
+    --font-size: 20px;
+}
+
+@media screen and (max-width: 500px) {
+    :root {
+        --font-size: 16px;
+    }
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --background: #0a0a0a;
+        --background: #060606;
         --foreground: #ededed;
     }
 }
